sol/2009-pj-f1-envelopes1.txt
Número de Envelopes
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 1.0 GB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2009f1pj_envelopes1.cpp: In function ‘int main()’:
2009f1pj_envelopes1.cpp:13:21: error: ‘INT_MAX’ was not declared in this scope
   13 |     int envelopes = INT_MAX;
      |                     ^~~~~~~
2009f1pj_envelopes1.cpp:3:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    2 | #include <vector>
  +++ |+#include <climits>
    3 |